--- a/label.html
+++ b/label.html
@@ -58,7 +58,7 @@
 		<section class="posts">
 			
 			<article>
-				<video width="auto" height="400" autoplay muted loop>
+				<video width="300" height="auto" autoplay muted loop>
 				<source video src="video/videolabel1.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 				</video>
@@ -66,7 +66,7 @@
 
 			<article>
 
-				<video width="auto" height="400" autoplay muted loop>
+				<video width="300" height="auto" autoplay muted loop>
 				<source video src="video/videolabel2.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 				</video>
