--- a/nixie.html
+++ b/nixie.html
@@ -46,7 +46,7 @@
 			usually mostly neon and often a little mercury and/or argon. 
 			
 			
-			<video width="auto" height="600" autoplay muted loop> 
+			<video width="300" height="auto" autoplay muted loop> 
 				<source video src="video/videonixie.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 			</video>
