--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 									</header>
 									<a href="nixie.html" class="image fit"><img src="images/nixie (1).jpg" alt="" /></a>
 									<p>
-										The orange light of nixie tubes reminds me of the Cold War and the Cherenkov radiation.
+										The orange light of nixie tubes reminds me of the Soviet Era and the Cherenkov radiation.
 									</p>
 									<ul class="actions special">
 										<li><a href="nixie.html" class="button">Full Story</a></li>
