--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 									<header>
 										<h2><a href="nixie.html">Nixie Clock</a></h2>
 									</header>
-									<a href="nixie.html" class="image fit"><img src="images/nixie (1).jpg" alt="" /></a>
+									<a href="nixie.html" class="image fit"><img src="images/nixie1.jpg" alt="" /></a>
 									<p>
 										The orange light of nixie tubes reminds me of the Soviet Era and the Cherenkov radiation.
 									</p>
