--- a/cnc.html
+++ b/cnc.html
@@ -88,12 +88,12 @@
 
 			<article>
 				<p>Final product.</p>
-				<a href="#" class="image fit"><img src="images/cnc (00).JPG" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/cncFinal.jpg" alt="" /></a>
 			</article>
 
 			<article>
 				<p>CNC Hardware tucked inside the Pc unit.</p>
-				<a href="#" class="image fit"><img src="images/cnc (2).JPG" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/cncHardware.jpg.JPG" alt="" /></a>
 			</article>
 			
 			<article>
