--- a/cnc.html
+++ b/cnc.html
@@ -93,7 +93,7 @@
 
 			<article>
 				<p>CNC Hardware tucked inside the Pc unit.</p>
-				<a href="#" class="image fit"><img src="images/cncHardware.jpg.JPG" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/cncHardware.jpg" alt="" /></a>
 			</article>
 			
 			<article>
@@ -113,8 +113,8 @@
 
 			<article>
 				<p>CNC Halftoning 1967 Toyota 2000GT . </p>
-				<a href="#" class="image fit"><img src="images/cnc (7).JPG" alt="" /></a>
-			</article>
+				<a href="#" class="image fit"><img src="images/cnc (7).jpg" alt="" /></a>
+			</article> 
 		
 		</section>
 
