--- a/label.html
+++ b/label.html
@@ -58,7 +58,7 @@
 		<section class="posts">
 			
 			<article>
-				<video width="400" height="auto" autoplay muted loop>
+				<video width="100%" height="auto" autoplay muted loop>
 				<source video src="video/videolabel1.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 				</video>
