--- a/label.html
+++ b/label.html
@@ -66,7 +66,7 @@
 
 			<article>
 
-				<video width="400" height="auto" autoplay muted loop>
+				<video width="100%" height="auto" autoplay muted loop>
 				<source video src="video/videolabel2.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 				</video>
