--- a/House.html
+++ b/House.html
@@ -3,7 +3,7 @@
 
 <html>
 	<head>
-		<title>Wood Working</title>
+		<title>This Old House</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,10 +23,10 @@
 						<ul class="links">
 							
 							<li><a href="index.html"> Main Projects </a></li>
-							<li class="active"><a href="wood.html"> Woodwoorking Projects </a></li>
-							<li><a href="House.html">This Old House</a></li>
+							<li><a href="wood.html">Woodwoorking Projects </a></li>
+							<li class="active"><a href="House.html">This Old House</a></li>
 
-
+							
 						</ul>
 
 						<ul class="icons">
@@ -41,43 +41,37 @@
 
 	<!-- Featured Post -->
 
+
+	<article>
+		<p> 
+			My first place here in US, duplex house build in 1954 in City Of Fairfax! I always enjoyed those HGTV remodell shows so I decided to give it a try! 
+			Driveway, drywall installation and painting was contracted out but the rest was my fun!
+		</p>
+	</article>
+
+
 <!-- Image -->
 
-<article>
-	<p> 
-		My last project, a custom walnut desk for a good friend! Hand cut dovetails, bookmatched drawer faces and 2 secret compartments. 
-	</p>
 
-<span class="image fit"><img src="images2/5.jpg" alt="" /></span>
-
-
-<hr />
-<p> 
-	Christmas Gifts! 
-</p>
-<div class="box alt">
-	<div class="row gtr-50 gtr-uniform">
-		
-			<div class="col-6"><span class="image fit"><img src="images2/1.jpg" alt="" /></span></div>
-			<div class="col-6"><span class="image fit"><img src="images2/2.jpg" alt="" /></span></div>
-	</div>
-</div>
-
-<hr />
-<p> 
-	Repurpose and Redesign!
-</p>
 <div class="box alt">
 	<div class="row gtr-50 gtr-uniform">
 		 
-			<div class="col-6"><span class="image fit"><img src="images2/3.jpg" alt="" /></span></div>
-			<div class="col-6"><span class="image fit"><img src="images2/4.jpg" alt="" /></span></div>
+			<div class="col-6"><span class="image fit"><img src="images3/1.jpg" alt="" /></span></div>
+			<div class="col-6"><span class="image fit"><img src="images3/2.jpg" alt="" /></span></div>
 	</div>
 </div>
 
 
+<div class="box alt">
+	<div class="row gtr-50 gtr-uniform">
+		 
+			<div class="col-6"><span class="image fit"><img src="images3/3.jpg" alt="" /></span></div>
+			<div class="col-6"><span class="image fit"><img src="images3/4.jpg" alt="" /></span></div>
+	</div>
+</div>
 
 
+ 
 <!-- Footer -->
 <footer id="footer">
 		<section>
