--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Main Projects</a></li>
 							<li><a href="wood.html">Woodwoorking Projects</a></li>
+							<li><a href="House.html">This Old House</a></li>
 						</ul>
 						
 						<ul class="icons">
