--- a/House.html
+++ b/House.html
@@ -68,6 +68,11 @@
 			<div class="col-6"><span class="image fit"><img src="images3/3.jpg" alt="" /></span></div>
 			<div class="col-6"><span class="image fit"><img src="images3/4.jpg" alt="" /></span></div>
 	</div>
+		<hr />
+	<ul class="actions special">
+		<li><a href="#" class="button">Go Up</a></li> 
+	</ul>
+	
 </div>
 
 
