--- a/wood.html
+++ b/wood.html
@@ -73,6 +73,12 @@
 			<div class="col-6"><span class="image fit"><img src="images2/3.jpg" alt="" /></span></div>
 			<div class="col-6"><span class="image fit"><img src="images2/4.jpg" alt="" /></span></div>
 	</div>
+	
+		<hr />
+	<ul class="actions special">
+		<li><a href="#" class="button">Go Up</a></li> 
+	</ul>
+	
 </div>
 
 
